--- a/S03.01-Exercise-RecyclerView/app/src/main/res/layout/activity_forecast.xml
+++ b/S03.01-Exercise-RecyclerView/app/src/main/res/layout/activity_forecast.xml
@@ -18,10 +18,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!--TODO (2) Replace ScrollView and TextView with RecyclerView-->
-    <!--TODO (3) Give the RecyclerView an id of @+id/recyclerview_forecast-->
-    <!--TODO (4) Set the width and the height of the RecyclerView to match_parent-->
-    <ScrollView
+    <!--ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -47,6 +44,32 @@
         android:layout_height="42dp"
         android:layout_width="42dp"
         android:layout_gravity="center"
+        android:visibility="invisible" /-->
+
+    <!--TODO (2) Replace ScrollView and TextView with RecyclerView-->
+    <!--TODO (3) Give the RecyclerView an id of @+id/recyclerview_forecast-->
+    <!--TODO (4) Set the width and the height of the RecyclerView to match_parent-->
+    <android.support.v7.widget.RecyclerView
+
+        android:id="@+id/recyclerview_forecast"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </android.support.v7.widget.RecyclerView>
+
+    <TextView
+        android:id="@+id/tv_error_message_display"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="16dp"
+        android:text="@string/error_message"
+        android:textSize="20sp"
         android:visibility="invisible" />
 
+    <ProgressBar
+        android:id="@+id/pb_loading_indicator"
+        android:layout_height="42dp"
+        android:layout_width="42dp"
+        android:layout_gravity="center"
+        android:visibility="invisible" />
 </FrameLayout>
